Add MCP access control filter, restore deleted plugins, fix IndexPlugin sort bug
MCP access control: Add McpAccessFilter with API key (Bearer token, constant-time
comparison) and IP CIDR allowlist. Either condition grants access; both unconfigured
means unrestricted (backwards-compatible). Registered programmatically on /mcp with
async support. New accessKey() and allowedCidrs() config getters on McpConfig.

Restore CurrentTimePlugin removed in f4ec85056 — needed by RecentChanges and
FullRecentChanges template pages. Add 4 new tests.

Fix IndexPlugin crash (UnsupportedOperationException) caused by JDK 21 cleanup
in 9ca757e05 converting collect(Collectors.toList()) to toList(), which returns
an immutable list that PageSorter.sort() cannot sort in place.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>